# market-ingestor

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Include/market_ingestor/transport/: http_request.hpp  rest_session.hpp  tls_config.hpp  tls_context_factory.hpp
proto/: market_ingestor.proto
src/: main.cpp
src/transport/: rest_session.cpp  tls_context_factory.cpp
